	- [OMAP5][MODULE] fix OMAP5430 ES2.0 PoR clock rates for DSP, GPU, IVA, SL2, C2C modules
	- [OMAP5][MODULE] handle ES1.0/ES2.0 differences in modules list
	- [OMAP5][CLKDMDEP] fix incorrect register table used for ES2.0
	- [OMAP5][OPP] add OMAP5430 ES2.0 OPP definitions
	- [OPP] round clock rates to MHz during comparisons in opp_show


v1.61:
-------
	- [OMAP5][CLKDM][PWRDM][MODULE] complete migration to generic layers and fix some ES2.0 bugs
	- [OMAP5][EMIF][MODULE] call genric module_xyz() functions instead of OMAP5-specific mod54xx_xyz() ones
	- [OMAP5][SR][MODULE] call generic module_xyz() functions instead of OMAP5-specific mod54xx_xyz() ones
	- [DEBUG] better trace memory reads and writes
	- [OMAP4][CLKDM][PWRDM] move xyz_config_show to respective libraries


v1.60:
-------
	- [MODULE][SYSCONFIG][AUDIT] reworked sysconfig audit
	- [MODULE][CLKSPEED][AUDIT] reworked clkspeed audit
	- [OMAP5][MODULE] rework "show opp" and "show pwst" to use new generic frameworks
	- [VOLTDM] handle new OMAP543x ES2.0 voltage domain status registers
	- [TRACE][OMAP4470][OMAP5] add EMIF total read and write bandwidth item to trace perf
	- [PWRDM][EMU] move EMU domain enable/disable functions to powerdomain lib
	- [TRACE][PERF][SETUP] fix segfault when default setup file cannot be created
	- [OMAP5][PRCM] handle ES2.0 module changes in CM_xyz_CLKCTRL registers
	- [OMAP5][PRCM] handle ES2.0 changes in CM_xyz_CLKSTCTRL registers
	- [OMAP5][MODULE] handle OMAP543x ES2.x PRCM registers changes in module info list
	- [OMAP5][MODULE][OPP] handle OMAP543x ES2.0 MPU and GPU frequency changes
	- [OMAP5][PRCM][CLOCK] handle OMAP543x ES2.0 clock tree changes
	- [OMAP5][DPLL] handle OMAP543x ES2.0 DPLLs changes
	- [OMAP5][CTRLMOD] handle OMAP543x ES2.0 Control Module changes
	- [OMAP5][EMIF] handle OMAP543x ES2.0 EMIF changes
	- [OMAP5][SYSCONFIG][MODULE] fix BB2D sysconfig register
	- [OMAP5][PRCM] handle OMAP543x ES2.0 PRM changes
	- [OMAP5][PRCM] handle OMAP543x ES2.0 CM changes